--- a/a/css/standard-unminified.css
+++ b/a/css/standard-unminified.css
@@ -1,5 +1,5 @@
 /* Copyright (©) 2024-2025 Callum Fisher - fishercallum@proton.me
-2024.08.09 - 2025.02.24 */
+2024.08.09 - 2025.03.13 */
 
 /* Fonts */
 
@@ -63,6 +63,10 @@ body {
 	color: black;
 	background-color: white;
 	margin: 0;
+}
+
+q {
+	font-style: italic;
 }
 
 /* Main Content Div - Contains .box div */
