--- a/a/css/standard-unminified.css
+++ b/a/css/standard-unminified.css
@@ -1,5 +1,5 @@
 /* Copyright (©) 2024-2025 Callum Fisher - fishercallum@proton.me
-2024.08.09 - 2025.03.13 */
+2024.08.09 - 2025.05.17 */
 
 /* Fonts */
 
@@ -85,8 +85,8 @@ main {
 	padding-left: 20%;
 	padding-right: 20%;
 
-	animation-name: fadeIn;
-	animation-duration: 0.5s;
+	/* animation-name: fadeIn;
+	animation-duration: 0.5s; */
 
 }
 
